exports[`prefer-temporal-conversion > invalid(1): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(({year: source.year, month: source.month, day: source.day, calendar: source.calendarId} as Temporal.PlainDateLike)); 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(({year: source.year, month: source.month, day: source.day, calendar: source.calendarId} as Temporal.PlainDateLike));

`;

exports[`prefer-temporal-conversion > invalid(1): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(({year: source.year, month: source.month, day: source.day, calendar: source.calendarId} as Temporal.PlainDateLike)); 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(({year: source.year, month: source.month, day: source.day, calendar: source.calendarId} as Temporal.PlainDateLike));
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainDate();

`;

exports[`prefer-temporal-conversion > invalid(1): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDate.from(source) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDate.from(source)

`;

exports[`prefer-temporal-conversion > invalid(1): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDate.from(source) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDate.from(source)
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(1): declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } } declare function getSource(): Temporal.ZonedDateTime; new Temporal.Instant(getSource().epochNanoseconds) 1`] = `

Filename: file.ts

  1 | declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } } declare function getSource(): Temporal.ZonedDateTime; new Temporal.Instant(getSource().epochNanoseconds)

`;

exports[`prefer-temporal-conversion > invalid(1): declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } } declare function getSource(): Temporal.ZonedDateTime; new Temporal.Instant(getSource().epochNanoseconds) 2`] = `

Message:
> 1 | declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } } declare function getSource(): Temporal.ZonedDateTime; new Temporal.Instant(getSource().epochNanoseconds)
    |                                                                                                                                                                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } } declare function getSource(): Temporal.ZonedDateTime; getSource().toInstant()

`;

exports[`prefer-temporal-conversion > invalid(10): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainTime.from(source.toString()) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainTime.from(source.toString())

`;

exports[`prefer-temporal-conversion > invalid(10): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainTime.from(source.toString()) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainTime.from(source.toString())
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainTime()\` when converting to \`Temporal.PlainTime\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainTime()

`;

exports[`prefer-temporal-conversion > invalid(10): function convert(source: Temporal.ZonedDateTime | Temporal.PlainDateTime) { return Temporal.PlainTime.from(source.toString()); } 1`] = `

  1 | function convert(source: Temporal.ZonedDateTime | Temporal.PlainDateTime) { return Temporal.PlainTime.from(source.toString()); }

`;

exports[`prefer-temporal-conversion > invalid(10): function convert(source: Temporal.ZonedDateTime | Temporal.PlainDateTime) { return Temporal.PlainTime.from(source.toString()); } 2`] = `

Message:
> 1 | function convert(source: Temporal.ZonedDateTime | Temporal.PlainDateTime) { return Temporal.PlainTime.from(source.toString()); }
    |                                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainTime()\` when converting to \`Temporal.PlainTime\`.

Output:
  1 | function convert(source: Temporal.ZonedDateTime | Temporal.PlainDateTime) { return source.toPlainTime(); }

`;

exports[`prefer-temporal-conversion > invalid(11): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainTime.from(source.toJSON()) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainTime.from(source.toJSON())

`;

exports[`prefer-temporal-conversion > invalid(11): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainTime.from(source.toJSON()) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainTime.from(source.toJSON())
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainTime()\` when converting to \`Temporal.PlainTime\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainTime()

`;

exports[`prefer-temporal-conversion > invalid(12): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); new Temporal.PlainTime(source.hour, source.minute, source.second, source.millisecond, source.microsecond, source.nanosecond) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); new Temporal.PlainTime(source.hour, source.minute, source.second, source.millisecond, source.microsecond, source.nanosecond)

`;

exports[`prefer-temporal-conversion > invalid(12): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); new Temporal.PlainTime(source.hour, source.minute, source.second, source.millisecond, source.microsecond, source.nanosecond) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); new Temporal.PlainTime(source.hour, source.minute, source.second, source.millisecond, source.microsecond, source.nanosecond)
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainTime()\` when converting to \`Temporal.PlainTime\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainTime()

`;

exports[`prefer-temporal-conversion > invalid(13): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainTime.from({hour: source.hour, minute: source.minute, second: source.second, millisecond: source.millisecond, microsecond: source.microsecond, nanosecond: source.nanosecond}) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainTime.from({hour: source.hour, minute: source.minute, second: source.second, millisecond: source.millisecond, microsecond: source.microsecond, nanosecond: source.nanosecond})

`;

exports[`prefer-temporal-conversion > invalid(13): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainTime.from({hour: source.hour, minute: source.minute, second: source.second, millisecond: source.millisecond, microsecond: source.microsecond, nanosecond: source.nanosecond}) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainTime.from({hour: source.hour, minute: source.minute, second: source.second, millisecond: source.millisecond, microsecond: source.microsecond, nanosecond: source.nanosecond})
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainTime()\` when converting to \`Temporal.PlainTime\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainTime()

`;

exports[`prefer-temporal-conversion > invalid(14): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDateTime.from(source) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDateTime.from(source)

`;

exports[`prefer-temporal-conversion > invalid(14): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDateTime.from(source) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDateTime.from(source)
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDateTime()\` when converting to \`Temporal.PlainDateTime\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainDateTime()

`;

exports[`prefer-temporal-conversion > invalid(15): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDateTime.from(source.toString()) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDateTime.from(source.toString())

`;

exports[`prefer-temporal-conversion > invalid(15): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDateTime.from(source.toString()) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDateTime.from(source.toString())
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDateTime()\` when converting to \`Temporal.PlainDateTime\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainDateTime()

`;

exports[`prefer-temporal-conversion > invalid(16): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDateTime.from(source.toJSON()) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDateTime.from(source.toJSON())

`;

exports[`prefer-temporal-conversion > invalid(16): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDateTime.from(source.toJSON()) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDateTime.from(source.toJSON())
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDateTime()\` when converting to \`Temporal.PlainDateTime\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainDateTime()

`;

exports[`prefer-temporal-conversion > invalid(17): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); new Temporal.PlainDateTime(source.year, source.month, source.day, source.hour, source.minute, source.second, source.millisecond, source.microsecond, source.nanosecond) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); new Temporal.PlainDateTime(source.year, source.month, source.day, source.hour, source.minute, source.second, source.millisecond, source.microsecond, source.nanosecond)

`;

exports[`prefer-temporal-conversion > invalid(17): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); new Temporal.PlainDateTime(source.year, source.month, source.day, source.hour, source.minute, source.second, source.millisecond, source.microsecond, source.nanosecond) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); new Temporal.PlainDateTime(source.year, source.month, source.day, source.hour, source.minute, source.second, source.millisecond, source.microsecond, source.nanosecond)
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDateTime()\` when converting to \`Temporal.PlainDateTime\`.

Suggestion 1/1: Replace with \`.toPlainDateTime()\`.:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainDateTime()

`;

exports[`prefer-temporal-conversion > invalid(18): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDateTime.from({year: source.year, month: source.month, day: source.day, hour: source.hour, minute: source.minute, second: source.second, millisecond: source.millisecond, microsecond: source.microsecond, nanosecond: source.nanosecond}) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDateTime.from({year: source.year, month: source.month, day: source.day, hour: source.hour, minute: source.minute, second: source.second, millisecond: source.millisecond, microsecond: source.microsecond, nanosecond: source.nanosecond})

`;

exports[`prefer-temporal-conversion > invalid(18): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDateTime.from({year: source.year, month: source.month, day: source.day, hour: source.hour, minute: source.minute, second: source.second, millisecond: source.millisecond, microsecond: source.microsecond, nanosecond: source.nanosecond}) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDateTime.from({year: source.year, month: source.month, day: source.day, hour: source.hour, minute: source.minute, second: source.second, millisecond: source.millisecond, microsecond: source.microsecond, nanosecond: source.nanosecond})
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDateTime()\` when converting to \`Temporal.PlainDateTime\`.

Suggestion 1/1: Replace with \`.toPlainDateTime()\`.:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainDateTime()

`;

exports[`prefer-temporal-conversion > invalid(19): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDateTime.from({calendar: source.calendarId, nanosecond: source.nanosecond, microsecond: source.microsecond, millisecond: source.millisecond, second: source.second, minute: source.minute, hour: source.hour, day: source.day, month: source.month, year: source.year}) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDateTime.from({calendar: source.calendarId, nanosecond: source.nanosecond, microsecond: source.microsecond, millisecond: source.millisecond, second: source.second, minute: source.minute, hour: source.hour, day: source.day, month: source.month, year: source.year})

`;

exports[`prefer-temporal-conversion > invalid(19): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDateTime.from({calendar: source.calendarId, nanosecond: source.nanosecond, microsecond: source.microsecond, millisecond: source.millisecond, second: source.second, minute: source.minute, hour: source.hour, day: source.day, month: source.month, year: source.year}) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDateTime.from({calendar: source.calendarId, nanosecond: source.nanosecond, microsecond: source.microsecond, millisecond: source.millisecond, second: source.second, minute: source.minute, hour: source.hour, day: source.day, month: source.month, year: source.year})
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDateTime()\` when converting to \`Temporal.PlainDateTime\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainDateTime()

`;

exports[`prefer-temporal-conversion > invalid(2): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(({year: source.year, month: source.month, day: source.day, calendar: source.calendarId} satisfies Temporal.PlainDateLike)); 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(({year: source.year, month: source.month, day: source.day, calendar: source.calendarId} satisfies Temporal.PlainDateLike));

`;

exports[`prefer-temporal-conversion > invalid(2): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(({year: source.year, month: source.month, day: source.day, calendar: source.calendarId} satisfies Temporal.PlainDateLike)); 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(({year: source.year, month: source.month, day: source.day, calendar: source.calendarId} satisfies Temporal.PlainDateLike));
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainDate();

`;

exports[`prefer-temporal-conversion > invalid(2): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDate.from(source.toString()) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDate.from(source.toString())

`;

exports[`prefer-temporal-conversion > invalid(2): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDate.from(source.toString()) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDate.from(source.toString())
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(2): declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } } declare function getSource(): Temporal.ZonedDateTime; Temporal.Instant.from(getSource()) 1`] = `

Filename: file.ts

  1 | declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } } declare function getSource(): Temporal.ZonedDateTime; Temporal.Instant.from(getSource())

`;

exports[`prefer-temporal-conversion > invalid(2): declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } } declare function getSource(): Temporal.ZonedDateTime; Temporal.Instant.from(getSource()) 2`] = `

Message:
> 1 | declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } } declare function getSource(): Temporal.ZonedDateTime; Temporal.Instant.from(getSource())
    |                                                                                                                                                                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } } declare function getSource(): Temporal.ZonedDateTime; getSource().toInstant()

`;

exports[`prefer-temporal-conversion > invalid(20): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDateTime.from({year: source.year, monthCode: source.monthCode, day: source.day, hour: source.hour, minute: source.minute, second: source.second, millisecond: source.millisecond, microsecond: source.microsecond, nanosecond: source.nanosecond, calendar: source.calendarId}) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDateTime.from({year: source.year, monthCode: source.monthCode, day: source.day, hour: source.hour, minute: source.minute, second: source.second, millisecond: source.millisecond, microsecond: source.microsecond, nanosecond: source.nanosecond, calendar: source.calendarId})

`;

exports[`prefer-temporal-conversion > invalid(20): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDateTime.from({year: source.year, monthCode: source.monthCode, day: source.day, hour: source.hour, minute: source.minute, second: source.second, millisecond: source.millisecond, microsecond: source.microsecond, nanosecond: source.nanosecond, calendar: source.calendarId}) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDateTime.from({year: source.year, monthCode: source.monthCode, day: source.day, hour: source.hour, minute: source.minute, second: source.second, millisecond: source.millisecond, microsecond: source.microsecond, nanosecond: source.nanosecond, calendar: source.calendarId})
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDateTime()\` when converting to \`Temporal.PlainDateTime\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainDateTime()

`;

exports[`prefer-temporal-conversion > invalid(21): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); new Temporal.PlainDateTime(source.year, source.month, source.day, source.hour, source.minute, source.second, source.millisecond, source.microsecond, source.nanosecond, source.calendarId) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); new Temporal.PlainDateTime(source.year, source.month, source.day, source.hour, source.minute, source.second, source.millisecond, source.microsecond, source.nanosecond, source.calendarId)

`;

exports[`prefer-temporal-conversion > invalid(21): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); new Temporal.PlainDateTime(source.year, source.month, source.day, source.hour, source.minute, source.second, source.millisecond, source.microsecond, source.nanosecond, source.calendarId) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); new Temporal.PlainDateTime(source.year, source.month, source.day, source.hour, source.minute, source.second, source.millisecond, source.microsecond, source.nanosecond, source.calendarId)
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDateTime()\` when converting to \`Temporal.PlainDateTime\`.

Suggestion 1/1: Replace with \`.toPlainDateTime()\`.:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainDateTime()

`;

exports[`prefer-temporal-conversion > invalid(22): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(source) 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(source)

`;

exports[`prefer-temporal-conversion > invalid(22): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(source) 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(source)
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(23): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(source.toString()) 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(source.toString())

`;

exports[`prefer-temporal-conversion > invalid(23): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(source.toString()) 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(source.toString())
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(24): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(source.toJSON()) 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(source.toJSON())

`;

exports[`prefer-temporal-conversion > invalid(24): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(source.toJSON()) 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(source.toJSON())
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(25): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); new Temporal.PlainDate(source.year, source.month, source.day) 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); new Temporal.PlainDate(source.year, source.month, source.day)

`;

exports[`prefer-temporal-conversion > invalid(25): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); new Temporal.PlainDate(source.year, source.month, source.day) 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); new Temporal.PlainDate(source.year, source.month, source.day)
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Suggestion 1/1: Replace with \`.toPlainDate()\`.:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(26): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from({year: source.year, month: source.month, day: source.day}) 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from({year: source.year, month: source.month, day: source.day})

`;

exports[`prefer-temporal-conversion > invalid(26): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from({year: source.year, month: source.month, day: source.day}) 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from({year: source.year, month: source.month, day: source.day})
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Suggestion 1/1: Replace with \`.toPlainDate()\`.:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(27): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from({calendar: source.calendarId, day: source.day, month: source.month, year: source.year}) 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from({calendar: source.calendarId, day: source.day, month: source.month, year: source.year})

`;

exports[`prefer-temporal-conversion > invalid(27): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from({calendar: source.calendarId, day: source.day, month: source.month, year: source.year}) 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from({calendar: source.calendarId, day: source.day, month: source.month, year: source.year})
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(28): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from({year: source.year, monthCode: source.monthCode, day: source.day, calendar: source.calendarId}) 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from({year: source.year, monthCode: source.monthCode, day: source.day, calendar: source.calendarId})

`;

exports[`prefer-temporal-conversion > invalid(28): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from({year: source.year, monthCode: source.monthCode, day: source.day, calendar: source.calendarId}) 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from({year: source.year, monthCode: source.monthCode, day: source.day, calendar: source.calendarId})
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(29): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); new Temporal.PlainDate(source.year, source.month, source.day, source.calendarId) 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); new Temporal.PlainDate(source.year, source.month, source.day, source.calendarId)

`;

exports[`prefer-temporal-conversion > invalid(29): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); new Temporal.PlainDate(source.year, source.month, source.day, source.calendarId) 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); new Temporal.PlainDate(source.year, source.month, source.day, source.calendarId)
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Suggestion 1/1: Replace with \`.toPlainDate()\`.:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(3): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from((<Temporal.PlainDateLike>{year: source.year, month: source.month, day: source.day, calendar: source.calendarId})); 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from((<Temporal.PlainDateLike>{year: source.year, month: source.month, day: source.day, calendar: source.calendarId}));

`;

exports[`prefer-temporal-conversion > invalid(3): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from((<Temporal.PlainDateLike>{year: source.year, month: source.month, day: source.day, calendar: source.calendarId})); 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from((<Temporal.PlainDateLike>{year: source.year, month: source.month, day: source.day, calendar: source.calendarId}));
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainDate();

`;

exports[`prefer-temporal-conversion > invalid(3): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDate.from(source.toJSON()) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDate.from(source.toJSON())

`;

exports[`prefer-temporal-conversion > invalid(3): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDate.from(source.toJSON()) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDate.from(source.toJSON())
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(3): export declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } } declare function getSource(): Temporal.ZonedDateTime; new Temporal.Instant(getSource().epochNanoseconds) 1`] = `

Filename: file.ts

  1 | export declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } } declare function getSource(): Temporal.ZonedDateTime; new Temporal.Instant(getSource().epochNanoseconds)

`;

exports[`prefer-temporal-conversion > invalid(3): export declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } } declare function getSource(): Temporal.ZonedDateTime; new Temporal.Instant(getSource().epochNanoseconds) 2`] = `

Message:
> 1 | export declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } } declare function getSource(): Temporal.ZonedDateTime; new Temporal.Instant(getSource().epochNanoseconds)
    |                                                                                                                                                                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | export declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } } declare function getSource(): Temporal.ZonedDateTime; getSource().toInstant()

`;

exports[`prefer-temporal-conversion > invalid(30): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainTime.from(source) 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainTime.from(source)

`;

exports[`prefer-temporal-conversion > invalid(30): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainTime.from(source) 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainTime.from(source)
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainTime()\` when converting to \`Temporal.PlainTime\`.

Output:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainTime()

`;

exports[`prefer-temporal-conversion > invalid(31): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainTime.from(source.toString()) 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainTime.from(source.toString())

`;

exports[`prefer-temporal-conversion > invalid(31): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainTime.from(source.toString()) 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainTime.from(source.toString())
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainTime()\` when converting to \`Temporal.PlainTime\`.

Output:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainTime()

`;

exports[`prefer-temporal-conversion > invalid(32): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainTime.from(source.toJSON()) 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainTime.from(source.toJSON())

`;

exports[`prefer-temporal-conversion > invalid(32): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainTime.from(source.toJSON()) 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainTime.from(source.toJSON())
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainTime()\` when converting to \`Temporal.PlainTime\`.

Output:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainTime()

`;

exports[`prefer-temporal-conversion > invalid(33): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); new Temporal.PlainTime(source.hour, source.minute, source.second, source.millisecond, source.microsecond, source.nanosecond) 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); new Temporal.PlainTime(source.hour, source.minute, source.second, source.millisecond, source.microsecond, source.nanosecond)

`;

exports[`prefer-temporal-conversion > invalid(33): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); new Temporal.PlainTime(source.hour, source.minute, source.second, source.millisecond, source.microsecond, source.nanosecond) 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); new Temporal.PlainTime(source.hour, source.minute, source.second, source.millisecond, source.microsecond, source.nanosecond)
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainTime()\` when converting to \`Temporal.PlainTime\`.

Output:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainTime()

`;

exports[`prefer-temporal-conversion > invalid(34): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainTime.from({hour: source.hour, minute: source.minute, second: source.second, millisecond: source.millisecond, microsecond: source.microsecond, nanosecond: source.nanosecond}) 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainTime.from({hour: source.hour, minute: source.minute, second: source.second, millisecond: source.millisecond, microsecond: source.microsecond, nanosecond: source.nanosecond})

`;

exports[`prefer-temporal-conversion > invalid(34): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainTime.from({hour: source.hour, minute: source.minute, second: source.second, millisecond: source.millisecond, microsecond: source.microsecond, nanosecond: source.nanosecond}) 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainTime.from({hour: source.hour, minute: source.minute, second: source.second, millisecond: source.millisecond, microsecond: source.microsecond, nanosecond: source.nanosecond})
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainTime()\` when converting to \`Temporal.PlainTime\`.

Output:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainTime()

`;

exports[`prefer-temporal-conversion > invalid(35): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); new Temporal.Instant(source.epochNanoseconds) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); new Temporal.Instant(source.epochNanoseconds)

`;

exports[`prefer-temporal-conversion > invalid(35): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); new Temporal.Instant(source.epochNanoseconds) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); new Temporal.Instant(source.epochNanoseconds)
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toInstant()

`;

exports[`prefer-temporal-conversion > invalid(36): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.Instant.from(source) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.Instant.from(source)

`;

exports[`prefer-temporal-conversion > invalid(36): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.Instant.from(source) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.Instant.from(source)
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toInstant()

`;

exports[`prefer-temporal-conversion > invalid(37): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.Instant.from(source.toJSON()) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.Instant.from(source.toJSON())

`;

exports[`prefer-temporal-conversion > invalid(37): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.Instant.from(source.toJSON()) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.Instant.from(source.toJSON())
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Suggestion 1/1: Replace with \`.toInstant()\`.:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toInstant()

`;

exports[`prefer-temporal-conversion > invalid(38): const source = Temporal.ZonedDateTime.from(\"1900-01-01T00:00[Europe/Paris]\"); Temporal.Instant.from(source.toString()) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("1900-01-01T00:00[Europe/Paris]"); Temporal.Instant.from(source.toString())

`;

exports[`prefer-temporal-conversion > invalid(38): const source = Temporal.ZonedDateTime.from(\"1900-01-01T00:00[Europe/Paris]\"); Temporal.Instant.from(source.toString()) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("1900-01-01T00:00[Europe/Paris]"); Temporal.Instant.from(source.toString())
    |                                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Suggestion 1/1: Replace with \`.toInstant()\`.:
  1 | const source = Temporal.ZonedDateTime.from("1900-01-01T00:00[Europe/Paris]"); source.toInstant()

`;

exports[`prefer-temporal-conversion > invalid(39): const source = Temporal.ZonedDateTime.from(\"1900-01-01T00:00[Europe/Paris]\"); Temporal.Instant.from(source) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("1900-01-01T00:00[Europe/Paris]"); Temporal.Instant.from(source)

`;

exports[`prefer-temporal-conversion > invalid(39): const source = Temporal.ZonedDateTime.from(\"1900-01-01T00:00[Europe/Paris]\"); Temporal.Instant.from(source) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("1900-01-01T00:00[Europe/Paris]"); Temporal.Instant.from(source)
    |                                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("1900-01-01T00:00[Europe/Paris]"); source.toInstant()

`;

exports[`prefer-temporal-conversion > invalid(4): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(({year: source.year, month: source.month, day: source.day, calendar: source.calendarId})!); 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(({year: source.year, month: source.month, day: source.day, calendar: source.calendarId})!);

`;

exports[`prefer-temporal-conversion > invalid(4): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(({year: source.year, month: source.month, day: source.day, calendar: source.calendarId})!); 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(({year: source.year, month: source.month, day: source.day, calendar: source.calendarId})!);
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainDate();

`;

exports[`prefer-temporal-conversion > invalid(4): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); new Temporal.PlainDate(source.year, source.month, source.day) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); new Temporal.PlainDate(source.year, source.month, source.day)

`;

exports[`prefer-temporal-conversion > invalid(4): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); new Temporal.PlainDate(source.year, source.month, source.day) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); new Temporal.PlainDate(source.year, source.month, source.day)
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Suggestion 1/1: Replace with \`.toPlainDate()\`.:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(4): declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } }\n\t\t\tdeclare const holder: {source: Temporal.ZonedDateTime};\n\t\t\tTemporal.PlainDate.from({year: holder.source.year, month: holder.source.month, day: holder.source.day, calendar: holder.source.calendarId})\n\t\t 1`] = `

Filename: file.ts

  1 | declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } }
  2 | 			declare const holder: {source: Temporal.ZonedDateTime};
  3 | 			Temporal.PlainDate.from({year: holder.source.year, month: holder.source.month, day: holder.source.day, calendar: holder.source.calendarId})
  4 | 		

`;

exports[`prefer-temporal-conversion > invalid(4): declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } }\n\t\t\tdeclare const holder: {source: Temporal.ZonedDateTime};\n\t\t\tTemporal.PlainDate.from({year: holder.source.year, month: holder.source.month, day: holder.source.day, calendar: holder.source.calendarId})\n\t\t 2`] = `

Message:
  1 | declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } }
  2 | 			declare const holder: {source: Temporal.ZonedDateTime};
> 3 | 			Temporal.PlainDate.from({year: holder.source.year, month: holder.source.month, day: holder.source.day, calendar: holder.source.calendarId})
    | 			^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.
  4 | 		

Output:
  1 | declare namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; year: number; month: number; day: number; calendarId: string; } }
  2 | 			declare const holder: {source: Temporal.ZonedDateTime};
  3 | 			holder.source.toPlainDate()
  4 | 		

`;

exports[`prefer-temporal-conversion > invalid(40): const source = new Temporal.ZonedDateTime(-123456789n, \"UTC\"); Temporal.Instant.fromEpochMilliseconds(source.epochMilliseconds) 1`] = `

  1 | const source = new Temporal.ZonedDateTime(-123456789n, "UTC"); Temporal.Instant.fromEpochMilliseconds(source.epochMilliseconds)

`;

exports[`prefer-temporal-conversion > invalid(40): const source = new Temporal.ZonedDateTime(-123456789n, \"UTC\"); Temporal.Instant.fromEpochMilliseconds(source.epochMilliseconds) 2`] = `

Message:
> 1 | const source = new Temporal.ZonedDateTime(-123456789n, "UTC"); Temporal.Instant.fromEpochMilliseconds(source.epochMilliseconds)
    |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Suggestion 1/1: Replace with \`.toInstant()\`.:
  1 | const source = new Temporal.ZonedDateTime(-123456789n, "UTC"); source.toInstant()

`;

exports[`prefer-temporal-conversion > invalid(41): const source = new Temporal.PlainDateTime(2024, 1, 2); Temporal.PlainDate.from(source.toString()) 1`] = `

  1 | const source = new Temporal.PlainDateTime(2024, 1, 2); Temporal.PlainDate.from(source.toString())

`;

exports[`prefer-temporal-conversion > invalid(41): const source = new Temporal.PlainDateTime(2024, 1, 2); Temporal.PlainDate.from(source.toString()) 2`] = `

Message:
> 1 | const source = new Temporal.PlainDateTime(2024, 1, 2); Temporal.PlainDate.from(source.toString())
    |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = new Temporal.PlainDateTime(2024, 1, 2); source.toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(42): Temporal.Instant.fromEpochNanoseconds(Temporal.Now.zonedDateTimeISO().epochNanoseconds) 1`] = `

  1 | Temporal.Instant.fromEpochNanoseconds(Temporal.Now.zonedDateTimeISO().epochNanoseconds)

`;

exports[`prefer-temporal-conversion > invalid(42): Temporal.Instant.fromEpochNanoseconds(Temporal.Now.zonedDateTimeISO().epochNanoseconds) 2`] = `

Message:
> 1 | Temporal.Instant.fromEpochNanoseconds(Temporal.Now.zonedDateTimeISO().epochNanoseconds)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | Temporal.Now.zonedDateTimeISO().toInstant()

`;

exports[`prefer-temporal-conversion > invalid(43): const source = Temporal.ZonedDateTime.from(value, options); Temporal.Instant.fromEpochNanoseconds(source.epochNanoseconds) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from(value, options); Temporal.Instant.fromEpochNanoseconds(source.epochNanoseconds)

`;

exports[`prefer-temporal-conversion > invalid(43): const source = Temporal.ZonedDateTime.from(value, options); Temporal.Instant.fromEpochNanoseconds(source.epochNanoseconds) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from(value, options); Temporal.Instant.fromEpochNanoseconds(source.epochNanoseconds)
    |                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from(value, options); source.toInstant()

`;

exports[`prefer-temporal-conversion > invalid(44): Temporal.Instant.fromEpochNanoseconds(Temporal.Now.zonedDateTimeISO(\"UTC\").epochNanoseconds) 1`] = `

  1 | Temporal.Instant.fromEpochNanoseconds(Temporal.Now.zonedDateTimeISO("UTC").epochNanoseconds)

`;

exports[`prefer-temporal-conversion > invalid(44): Temporal.Instant.fromEpochNanoseconds(Temporal.Now.zonedDateTimeISO(\"UTC\").epochNanoseconds) 2`] = `

Message:
> 1 | Temporal.Instant.fromEpochNanoseconds(Temporal.Now.zonedDateTimeISO("UTC").epochNanoseconds)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | Temporal.Now.zonedDateTimeISO("UTC").toInstant()

`;

exports[`prefer-temporal-conversion > invalid(45): Temporal.PlainDate.from(Temporal.Now.plainDateTimeISO().toString()) 1`] = `

  1 | Temporal.PlainDate.from(Temporal.Now.plainDateTimeISO().toString())

`;

exports[`prefer-temporal-conversion > invalid(45): Temporal.PlainDate.from(Temporal.Now.plainDateTimeISO().toString()) 2`] = `

Message:
> 1 | Temporal.PlainDate.from(Temporal.Now.plainDateTimeISO().toString())
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | Temporal.Now.plainDateTimeISO().toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(46): Temporal.PlainDate.from(Temporal.Now.plainDateTimeISO(\"UTC\")) 1`] = `

  1 | Temporal.PlainDate.from(Temporal.Now.plainDateTimeISO("UTC"))

`;

exports[`prefer-temporal-conversion > invalid(46): Temporal.PlainDate.from(Temporal.Now.plainDateTimeISO(\"UTC\")) 2`] = `

Message:
> 1 | Temporal.PlainDate.from(Temporal.Now.plainDateTimeISO("UTC"))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | Temporal.Now.plainDateTimeISO("UTC").toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(47): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); const alias = source; Temporal.Instant.fromEpochNanoseconds(alias.epochNanoseconds) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); const alias = source; Temporal.Instant.fromEpochNanoseconds(alias.epochNanoseconds)

`;

exports[`prefer-temporal-conversion > invalid(47): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); const alias = source; Temporal.Instant.fromEpochNanoseconds(alias.epochNanoseconds) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); const alias = source; Temporal.Instant.fromEpochNanoseconds(alias.epochNanoseconds)
    |                                                                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); const alias = source; alias.toInstant()

`;

exports[`prefer-temporal-conversion > invalid(48): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); const other = Temporal.Now.zonedDateTimeISO(); Temporal.Instant.fromEpochNanoseconds((condition ? source : other).epochNanoseconds) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); const other = Temporal.Now.zonedDateTimeISO(); Temporal.Instant.fromEpochNanoseconds((condition ? source : other).epochNanoseconds)

`;

exports[`prefer-temporal-conversion > invalid(48): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); const other = Temporal.Now.zonedDateTimeISO(); Temporal.Instant.fromEpochNanoseconds((condition ? source : other).epochNanoseconds) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); const other = Temporal.Now.zonedDateTimeISO(); Temporal.Instant.fromEpochNanoseconds((condition ? source : other).epochNanoseconds)
    |                                                                                                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); const other = Temporal.Now.zonedDateTimeISO(); (condition ? source : other).toInstant()

`;

exports[`prefer-temporal-conversion > invalid(49): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.Instant.fromEpochNanoseconds((log(), source).epochNanoseconds) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.Instant.fromEpochNanoseconds((log(), source).epochNanoseconds)

`;

exports[`prefer-temporal-conversion > invalid(49): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.Instant.fromEpochNanoseconds((log(), source).epochNanoseconds) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.Instant.fromEpochNanoseconds((log(), source).epochNanoseconds)
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); (log(), source).toInstant()

`;

exports[`prefer-temporal-conversion > invalid(5): \n\t\t\tdeclare namespace Polyfill { namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; } } }\n\t\t\tdeclare function getSource(): Polyfill.Temporal.ZonedDateTime;\n\t\t\tnew Temporal.Instant(getSource().epochNanoseconds)\n\t\t 1`] = `

Filename: file.ts

  1 |
  2 | 			declare namespace Polyfill { namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; } } }
  3 | 			declare function getSource(): Polyfill.Temporal.ZonedDateTime;
  4 | 			new Temporal.Instant(getSource().epochNanoseconds)
  5 | 		

`;

exports[`prefer-temporal-conversion > invalid(5): \n\t\t\tdeclare namespace Polyfill { namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; } } }\n\t\t\tdeclare function getSource(): Polyfill.Temporal.ZonedDateTime;\n\t\t\tnew Temporal.Instant(getSource().epochNanoseconds)\n\t\t 2`] = `

Message:
  1 |
  2 | 			declare namespace Polyfill { namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; } } }
  3 | 			declare function getSource(): Polyfill.Temporal.ZonedDateTime;
> 4 | 			new Temporal.Instant(getSource().epochNanoseconds)
    | 			^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.
  5 | 		

Output:
  1 |
  2 | 			declare namespace Polyfill { namespace Temporal { class ZonedDateTime { epochNanoseconds: bigint; } } }
  3 | 			declare function getSource(): Polyfill.Temporal.ZonedDateTime;
  4 | 			getSource().toInstant()
  5 | 		

`;

exports[`prefer-temporal-conversion > invalid(5): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(({year: source.year, month: source.month, day: source.day, calendar: source.calendarId} as /* keep */ Temporal.PlainDateLike)); 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(({year: source.year, month: source.month, day: source.day, calendar: source.calendarId} as /* keep */ Temporal.PlainDateLike));

`;

exports[`prefer-temporal-conversion > invalid(5): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(({year: source.year, month: source.month, day: source.day, calendar: source.calendarId} as /* keep */ Temporal.PlainDateLike)); 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(({year: source.year, month: source.month, day: source.day, calendar: source.calendarId} as /* keep */ Temporal.PlainDateLike));
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

`;

exports[`prefer-temporal-conversion > invalid(5): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDate.from({year: source.year, month: source.month, day: source.day}) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDate.from({year: source.year, month: source.month, day: source.day})

`;

exports[`prefer-temporal-conversion > invalid(5): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDate.from({year: source.year, month: source.month, day: source.day}) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDate.from({year: source.year, month: source.month, day: source.day})
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Suggestion 1/1: Replace with \`.toPlainDate()\`.:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(50): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDate.from((log(), source).toString()) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDate.from((log(), source).toString())

`;

exports[`prefer-temporal-conversion > invalid(50): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDate.from((log(), source).toString()) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDate.from((log(), source).toString())
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); (log(), source).toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(51): import {Temporal} from \"@js-temporal/polyfill\"; const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.Instant.fromEpochNanoseconds(source.epochNanoseconds) 1`] = `

  1 | import {Temporal} from "@js-temporal/polyfill"; const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.Instant.fromEpochNanoseconds(source.epochNanoseconds)

`;

exports[`prefer-temporal-conversion > invalid(51): import {Temporal} from \"@js-temporal/polyfill\"; const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.Instant.fromEpochNanoseconds(source.epochNanoseconds) 2`] = `

Message:
> 1 | import {Temporal} from "@js-temporal/polyfill"; const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.Instant.fromEpochNanoseconds(source.epochNanoseconds)
    |                                                                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | import {Temporal} from "@js-temporal/polyfill"; const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toInstant()

`;

exports[`prefer-temporal-conversion > invalid(52): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.Instant.fromEpochNanoseconds(/* retain */ source.epochNanoseconds) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.Instant.fromEpochNanoseconds(/* retain */ source.epochNanoseconds)

`;

exports[`prefer-temporal-conversion > invalid(52): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.Instant.fromEpochNanoseconds(/* retain */ source.epochNanoseconds) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.Instant.fromEpochNanoseconds(/* retain */ source.epochNanoseconds)
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

`;

exports[`prefer-temporal-conversion > invalid(53): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(/* retain */ source) 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(/* retain */ source)

`;

exports[`prefer-temporal-conversion > invalid(53): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(/* retain */ source) 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(/* retain */ source)
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

`;

exports[`prefer-temporal-conversion > invalid(54): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.Instant.fromEpochMilliseconds(source.epochMilliseconds /* retain */) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.Instant.fromEpochMilliseconds(source.epochMilliseconds /* retain */)

`;

exports[`prefer-temporal-conversion > invalid(54): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.Instant.fromEpochMilliseconds(source.epochMilliseconds /* retain */) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.Instant.fromEpochMilliseconds(source.epochMilliseconds /* retain */)
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

`;

exports[`prefer-temporal-conversion > invalid(55): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDate.from({year: source.year, month: source.month, /* retain */ day: source.day}) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDate.from({year: source.year, month: source.month, /* retain */ day: source.day})

`;

exports[`prefer-temporal-conversion > invalid(55): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDate.from({year: source.year, month: source.month, /* retain */ day: source.day}) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDate.from({year: source.year, month: source.month, /* retain */ day: source.day})
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

`;

exports[`prefer-temporal-conversion > invalid(56): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.Instant.fromEpochNanoseconds((source).epochNanoseconds).toString() 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.Instant.fromEpochNanoseconds((source).epochNanoseconds).toString()

`;

exports[`prefer-temporal-conversion > invalid(56): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.Instant.fromEpochNanoseconds((source).epochNanoseconds).toString() 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.Instant.fromEpochNanoseconds((source).epochNanoseconds).toString()
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); (source).toInstant().toString()

`;

exports[`prefer-temporal-conversion > invalid(57): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); function convert() { return Temporal.PlainDate.from(source.toString()); } 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); function convert() { return Temporal.PlainDate.from(source.toString()); }

`;

exports[`prefer-temporal-conversion > invalid(57): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); function convert() { return Temporal.PlainDate.from(source.toString()); } 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); function convert() { return Temporal.PlainDate.from(source.toString()); }
    |                                                                                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); function convert() { return source.toPlainDate(); }

`;

exports[`prefer-temporal-conversion > invalid(58): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); <div>{Temporal.PlainDate.from(source.toString())}</div> 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); <div>{Temporal.PlainDate.from(source.toString())}</div>

`;

exports[`prefer-temporal-conversion > invalid(58): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); <div>{Temporal.PlainDate.from(source.toString())}</div> 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); <div>{Temporal.PlainDate.from(source.toString())}</div>
    |                                                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); <div>{source.toPlainDate()}</div>

`;

exports[`prefer-temporal-conversion > invalid(59): function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds(source.epochNanoseconds); } 1`] = `

  1 | function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds(source.epochNanoseconds); }

`;

exports[`prefer-temporal-conversion > invalid(59): function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds(source.epochNanoseconds); } 2`] = `

Message:
> 1 | function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds(source.epochNanoseconds); }
    |                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | function convert(source: Temporal.ZonedDateTime) { return source.toInstant(); }

`;

exports[`prefer-temporal-conversion > invalid(6): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from({year: source.year as number, month: (source.month satisfies number), day: source.day!, calendar: source.calendarId as string}); 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from({year: source.year as number, month: (source.month satisfies number), day: source.day!, calendar: source.calendarId as string});

`;

exports[`prefer-temporal-conversion > invalid(6): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from({year: source.year as number, month: (source.month satisfies number), day: source.day!, calendar: source.calendarId as string}); 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from({year: source.year as number, month: (source.month satisfies number), day: source.day!, calendar: source.calendarId as string});
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainDate();

`;

exports[`prefer-temporal-conversion > invalid(6): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDate.from({calendar: source.calendarId, day: source.day, month: source.month, year: source.year}) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDate.from({calendar: source.calendarId, day: source.day, month: source.month, year: source.year})

`;

exports[`prefer-temporal-conversion > invalid(6): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDate.from({calendar: source.calendarId, day: source.day, month: source.month, year: source.year}) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDate.from({calendar: source.calendarId, day: source.day, month: source.month, year: source.year})
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(60): function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds((source as Temporal.ZonedDateTime).epochNanoseconds); } 1`] = `

  1 | function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds((source as Temporal.ZonedDateTime).epochNanoseconds); }

`;

exports[`prefer-temporal-conversion > invalid(60): function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds((source as Temporal.ZonedDateTime).epochNanoseconds); } 2`] = `

Message:
> 1 | function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds((source as Temporal.ZonedDateTime).epochNanoseconds); }
    |                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | function convert(source: Temporal.ZonedDateTime) { return (source as Temporal.ZonedDateTime).toInstant(); }

`;

exports[`prefer-temporal-conversion > invalid(61): function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds((source satisfies Temporal.ZonedDateTime).epochNanoseconds); } 1`] = `

  1 | function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds((source satisfies Temporal.ZonedDateTime).epochNanoseconds); }

`;

exports[`prefer-temporal-conversion > invalid(61): function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds((source satisfies Temporal.ZonedDateTime).epochNanoseconds); } 2`] = `

Message:
> 1 | function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds((source satisfies Temporal.ZonedDateTime).epochNanoseconds); }
    |                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | function convert(source: Temporal.ZonedDateTime) { return (source satisfies Temporal.ZonedDateTime).toInstant(); }

`;

exports[`prefer-temporal-conversion > invalid(62): function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds(source!.epochNanoseconds); } 1`] = `

  1 | function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds(source!.epochNanoseconds); }

`;

exports[`prefer-temporal-conversion > invalid(62): function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds(source!.epochNanoseconds); } 2`] = `

Message:
> 1 | function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds(source!.epochNanoseconds); }
    |                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | function convert(source: Temporal.ZonedDateTime) { return source!.toInstant(); }

`;

exports[`prefer-temporal-conversion > invalid(63): function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds((<Temporal.ZonedDateTime>source).epochNanoseconds); } 1`] = `

  1 | function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds((<Temporal.ZonedDateTime>source).epochNanoseconds); }

`;

exports[`prefer-temporal-conversion > invalid(63): function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds((<Temporal.ZonedDateTime>source).epochNanoseconds); } 2`] = `

Message:
> 1 | function convert(source: Temporal.ZonedDateTime) { return Temporal.Instant.fromEpochNanoseconds((<Temporal.ZonedDateTime>source).epochNanoseconds); }
    |                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | function convert(source: Temporal.ZonedDateTime) { return (<Temporal.ZonedDateTime>source).toInstant(); }

`;

exports[`prefer-temporal-conversion > invalid(64): const source = Temporal.Now.zonedDateTimeISO();\nfoo()\nTemporal.Instant.fromEpochNanoseconds((source as Temporal.ZonedDateTime).epochNanoseconds) 1`] = `

  1 | const source = Temporal.Now.zonedDateTimeISO();
  2 | foo()
  3 | Temporal.Instant.fromEpochNanoseconds((source as Temporal.ZonedDateTime).epochNanoseconds)

`;

exports[`prefer-temporal-conversion > invalid(64): const source = Temporal.Now.zonedDateTimeISO();\nfoo()\nTemporal.Instant.fromEpochNanoseconds((source as Temporal.ZonedDateTime).epochNanoseconds) 2`] = `

Message:
  1 | const source = Temporal.Now.zonedDateTimeISO();
  2 | foo()
> 3 | Temporal.Instant.fromEpochNanoseconds((source as Temporal.ZonedDateTime).epochNanoseconds)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toInstant()\` when converting to \`Temporal.Instant\`.

Output:
  1 | const source = Temporal.Now.zonedDateTimeISO();
  2 | foo()
  3 | ;(source as Temporal.ZonedDateTime).toInstant()

`;

exports[`prefer-temporal-conversion > invalid(65): function convert(source: Temporal.PlainDateTime) { return Temporal.PlainDate.from({year: source.year, month: source.month, day: source.day, calendar: source.calendarId}); } 1`] = `

  1 | function convert(source: Temporal.PlainDateTime) { return Temporal.PlainDate.from({year: source.year, month: source.month, day: source.day, calendar: source.calendarId}); }

`;

exports[`prefer-temporal-conversion > invalid(65): function convert(source: Temporal.PlainDateTime) { return Temporal.PlainDate.from({year: source.year, month: source.month, day: source.day, calendar: source.calendarId}); } 2`] = `

Message:
> 1 | function convert(source: Temporal.PlainDateTime) { return Temporal.PlainDate.from({year: source.year, month: source.month, day: source.day, calendar: source.calendarId}); }
    |                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | function convert(source: Temporal.PlainDateTime) { return source.toPlainDate(); }

`;

exports[`prefer-temporal-conversion > invalid(66): function convert(source: Temporal.PlainDateTime) { return Temporal.PlainDate.from(source as Temporal.PlainDateTime); } 1`] = `

  1 | function convert(source: Temporal.PlainDateTime) { return Temporal.PlainDate.from(source as Temporal.PlainDateTime); }

`;

exports[`prefer-temporal-conversion > invalid(66): function convert(source: Temporal.PlainDateTime) { return Temporal.PlainDate.from(source as Temporal.PlainDateTime); } 2`] = `

Message:
> 1 | function convert(source: Temporal.PlainDateTime) { return Temporal.PlainDate.from(source as Temporal.PlainDateTime); }
    |                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | function convert(source: Temporal.PlainDateTime) { return (source as Temporal.PlainDateTime).toPlainDate(); }

`;

exports[`prefer-temporal-conversion > invalid(67): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDate.from({\"year\": source.year, \"month\": source.month, \"day\": source.day}) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDate.from({"year": source.year, "month": source.month, "day": source.day})

`;

exports[`prefer-temporal-conversion > invalid(67): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDate.from({\"year\": source.year, \"month\": source.month, \"day\": source.day}) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDate.from({"year": source.year, "month": source.month, "day": source.day})
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Suggestion 1/1: Replace with \`.toPlainDate()\`.:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(7): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(source.toString() as string); 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(source.toString() as string);

`;

exports[`prefer-temporal-conversion > invalid(7): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(source.toString() as string); 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(source.toString() as string);
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainDate();

`;

exports[`prefer-temporal-conversion > invalid(7): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDate.from({year: source.year, monthCode: source.monthCode, day: source.day, calendar: source.calendarId}) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDate.from({year: source.year, monthCode: source.monthCode, day: source.day, calendar: source.calendarId})

`;

exports[`prefer-temporal-conversion > invalid(7): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainDate.from({year: source.year, monthCode: source.monthCode, day: source.day, calendar: source.calendarId}) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainDate.from({year: source.year, monthCode: source.monthCode, day: source.day, calendar: source.calendarId})
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(8): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(source.toJSON() satisfies string); 1`] = `

  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(source.toJSON() satisfies string);

`;

exports[`prefer-temporal-conversion > invalid(8): const source = Temporal.PlainDateTime.from(\"2024-01-02T03:04:05.123456789[u-ca=hebrew]\"); Temporal.PlainDate.from(source.toJSON() satisfies string); 2`] = `

Message:
> 1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); Temporal.PlainDate.from(source.toJSON() satisfies string);
    |                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | const source = Temporal.PlainDateTime.from("2024-01-02T03:04:05.123456789[u-ca=hebrew]"); source.toPlainDate();

`;

exports[`prefer-temporal-conversion > invalid(8): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); new Temporal.PlainDate(source.year, source.month, source.day, source.calendarId) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); new Temporal.PlainDate(source.year, source.month, source.day, source.calendarId)

`;

exports[`prefer-temporal-conversion > invalid(8): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); new Temporal.PlainDate(source.year, source.month, source.day, source.calendarId) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); new Temporal.PlainDate(source.year, source.month, source.day, source.calendarId)
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Suggestion 1/1: Replace with \`.toPlainDate()\`.:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainDate()

`;

exports[`prefer-temporal-conversion > invalid(9): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainTime.from(source) 1`] = `

  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainTime.from(source)

`;

exports[`prefer-temporal-conversion > invalid(9): const source = Temporal.ZonedDateTime.from(\"2024-01-02T03:04:05.123456789+00:00[UTC]\"); Temporal.PlainTime.from(source) 2`] = `

Message:
> 1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); Temporal.PlainTime.from(source)
    |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainTime()\` when converting to \`Temporal.PlainTime\`.

Output:
  1 | const source = Temporal.ZonedDateTime.from("2024-01-02T03:04:05.123456789+00:00[UTC]"); source.toPlainTime()

`;

exports[`prefer-temporal-conversion > invalid(9): function convert(source: Temporal.ZonedDateTime | Temporal.PlainDateTime) { return Temporal.PlainDate.from(source.toString()); } 1`] = `

  1 | function convert(source: Temporal.ZonedDateTime | Temporal.PlainDateTime) { return Temporal.PlainDate.from(source.toString()); }

`;

exports[`prefer-temporal-conversion > invalid(9): function convert(source: Temporal.ZonedDateTime | Temporal.PlainDateTime) { return Temporal.PlainDate.from(source.toString()); } 2`] = `

Message:
> 1 | function convert(source: Temporal.ZonedDateTime | Temporal.PlainDateTime) { return Temporal.PlainDate.from(source.toString()); }
    |                                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`.toPlainDate()\` when converting to \`Temporal.PlainDate\`.

Output:
  1 | function convert(source: Temporal.ZonedDateTime | Temporal.PlainDateTime) { return source.toPlainDate(); }

`;
